# neuralnetwork

./: .gitignore  README.md
backend/: main.py  network.py  pyproject.toml  server.py
backend/components/: linear_layer.py
backend/components/activations/: activation_function.py
frontend/src/: App.tsx
neural_networks/: main.py  network.py  server.py
neural_networks/components/: loss_function.py
